; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_hash.c_Curl_str_key_compare.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_hash.c_Curl_str_key_compare.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @Curl_str_key_compare(i8* %0, i64 %1, i8* %2, i64 %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  store i8* %0, i8** %6, align 8
  store i64 %1, i64* %7, align 8
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  %10 = load i64, i64* %7, align 8
  %11 = load i64, i64* %9, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %20

13:                                               ; preds = %4
  %14 = load i8*, i8** %6, align 8
  %15 = load i8*, i8** %8, align 8
  %16 = load i64, i64* %7, align 8
  %17 = call i32 @memcmp(i8* %14, i8* %15, i64 %16)
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %20, label %19

19:                                               ; preds = %13
  store i64 1, i64* %5, align 8
  br label %21

20:                                               ; preds = %13, %4
  store i64 0, i64* %5, align 8
  br label %21

21:                                               ; preds = %20, %19
  %22 = load i64, i64* %5, align 8
  ret i64 %22
}

declare dso_local i32 @memcmp(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
